recursion.lessons.recursion.tree.Tree.scala.error
Tree:2: error: not found: value steps
var s:Int = steps	
            ^Tree:15: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
	tree()
            ^