recursion.lessons.recursion.tree.Tree.scala.code
var s:Int = steps	
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	current(steps)	
	avance(length)
	droite(angle)
	avance(shrink*length)
	
	s=s-1


}
while(s!=0){
	tree()
}
